$Id$


                          Commons Discovery Package
                                Version 0.5
                               Release Notes


INTRODUCTION
============

This is an APIs update and maintenance release.
New projects are encouraged to use this release of discovery.

IMPORTANT NOTES
===============

BREAKING CHANGES:

 * The minimum JDK requirement is now JDK 1.5. The provided binaries will not
   work on lower JDKs. The source has been updated to leverage Generics and
   other JDK 1.5 features where possible, and requires JDK 1.5 to compile.

Dependencies
=============
Commons Discovery depends on Commons Logging. It is built against version 1.1.1.

NEW FEATURES
=============
* Discovery APIs use Java5 Generics.

BUGS FROM PREVIOUS RELEASE
=========================

JIRA Issues Addressed
---------------------
* DISCOVERY-3 (https://issues.apache.org/jira/browse/DISCOVERY-3)
* DISCOVERY-7 (https://issues.apache.org/jira/browse/DISCOVERY-7)
* DISCOVERY-11 (https://issues.apache.org/jira/browse/DISCOVERY-11)
* DISCOVERY-12 (https://issues.apache.org/jira/browse/DISCOVERY-12)
* DISCOVERY-14 (https://issues.apache.org/jira/browse/DISCOVERY-14)
* DISCOVERY-15 (https://issues.apache.org/jira/browse/DISCOVERY-15)
* DISCOVERY-16 (https://issues.apache.org/jira/browse/DISCOVERY-16)


DEPRECATIONS
============
Classes in org.apache.commons.discovery.log package have been deprecated,
depending on Apache Commons Logging 1.1.1 there is no more circular dependency
between Apache Commons Discovery and Apache Commons Logging.

setLog(org.apache.commons.logging.Log) methods have been deprecated too,
they are not thread-safe.