@@ -151,7 +151,7 @@ used and maintains internal state.
 [NEED BETTER EXAMPLE]
 <ul>
 <source>
-    import org.apache.commons.discovery.DiscoverClass;
+    import org.apache.commons.discovery.DiscoverClasses;
     import org.apache.commons.logging.LogFactory;
     ...
     DiscoverClass discoverClass = new DiscoverClass();
@@ -163,6 +163,29 @@ In this case, DiscoverClass looks for the value of the system property
 for the name of a class that implements the <code>LogFactory</code> (abstract) class.
 Failing that, it uses JDK1.3-style service discovery.
 </p>
+
+<p>To find <b>all</b> the SPI implementation classes from user-code, use <code>DiscoverClasses</code> instead:</p>
+<source>
+    import org.apache.commons.discovery.ResourceClassIterator;
+    import org.apache.commons.discovery.ResourceClass:
+    import org.apache.commons.discovery.resource.classes.DiscoverClasses;
+    import org.apache.commons.logging.LogFactory;
+    ...
+    DiscoverClasses&lt;LogFactory&gt; discovery = new DiscoverClasses&lt;TestInterface2&gt;(loaders);
+    ResourceClassIterator&lt;LogFactory&gt; iter = discovery.findResourceClasses(name);
+    while (iter.hasNext()) {
+        ResourceClass&lt;LogFactory&gt; resource = iter.nextResourceClass();
+        try {
+            Class&lt;? extends LogFactory&gt; implClass = resource.loadClass();
+                if (implClass != null) {
+                    // TODO do something
+                }
+            } catch (Exception e) {
+                // TODO handle exception
+            }
+        }
+    }
+</source>
 
 <p>To instantiate a class directly from user-code:
 [NEED BETTER EXAMPLE]
